...
        android:layout_height="wrap_content"
        android:text="Name"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEdit"
        android:layout_marginBottom="8dp" />

    <!-- User Email -->
    <TextView
        android:id="@+id/userEmail"
        android:layout_width="0dp"
...
        android:src="@android:drawable/ic_menu_edit"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Delete Button -->
    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="Delete User"
        android:src="@android:drawable/ic_menu_delete"
        app:layout_constraintTop_toBottomOf="@id/btnEdit"
...
